<?xml version="1.0"?>
<package>
  <name>csm</name>
  <version>0.1.0</version>
  <description>Wraps the Canonical Scan Matcher ito a ROS package.</description>

  <maintainer email="frost@iti.uni-luebeck.de">jan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
